Finish infoborder positioning and set max-width to view parent to prevent stretching elements

--- a/frontend/src/views/sub/train/Overview.css
+++ b/frontend/src/views/sub/train/Overview.css
@@ -1,11 +1,14 @@
 .Overview-routine {
-  width: 90%;
+  width: 95%;
   margin: 30px auto; 
 
 
 }
 
 .Overview-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0 8px;
   font-size: 0.8em;
   font-weight: 100;
